<resources>
    <string name="app_name">Leafy</string>
    <string name="mapbox_access_token">pk.eyJ1IjoiZWxlY3Ryb25pY2NvZGUiLCJhIjoiY2tqZG8yYm94MmM1aTJ3cnVsaHIyMWhyNSJ9.CEE6JuJApgJ_emqEDD-pUQ</string>
    <string name="prijavi_se_text">PRIJAVI SE</string>
    <string name="registruj_se_text">REGISTRUJ SE</string>
    <string name="registracija_text">Registracija...</string>
    <string name="cuvanje_text">Čuvanje...</string>
    <string name="prijava_text">PRIJAVA</string>
    <string name="prodaj_zitarice_desc">Prodajte svoje proizvode okolini</string>
    <string name="prodaj_zitarice_text">Leafy trade</string>
    <string name="leafy_book_title">Leafy book</string>
    <string name="vrijeme_text">Vrijeme</string>
    <string name="vrijeme_desc">Pogledajte vremensku prognozu</string>
    <string name="profil_text">Profil</string>
    <string name="profil_desc">Uradite izmjene oko profila i objava</string>
    <string name="leafy_book_desc">Informacije o biljkama i herbicidima</string>
    <string name="kupi_zitarice_desc">Pronađite proizvode u vašoj okolini.</string>
    <string name="forum_desc">Imate problem ? Zatražite pomoć</string>
    <string name="forum_text">Forum</string>
    <string name="leafy_vision_desc">Otkrijte bolest uz pomoć umjetne inteligencije</string>
    <string name="leafy_vision_text">Leafy vision</string>
    <string name="procitaj_text">Pročitaj</string>
    <string name="izaberi_biljku_text">Izaberite biljku koju želite skenirati.</string>
    <string name="kukuruz_text">Kukuruz</string>
    <string name="krompir_text">Krompir</string>
    <string name="leafy_vision_bottom_sheet_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis facilisis tellus. Morbi fringilla justo turpis, sed efficitur nisi accumsan quis. Sed sollicitudin elementum ultricies. Cras tempus eros sed neque auctor sagittis. Phasellus id pellentesque augue. Maecenas tristique sem turpis, ac interdum velit tincidunt non.</string>
    <string name="leafy_vision_bottom_sheet_title_dummy">Lorem ipsum</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="leafy_trade_euro_per_kg_text">\u20AC/kg</string>
    <string name="pitanje_no_comments_text">Nema odgovora na ovo pitanje.\n Budite prvi koji će odgovoriti.</string>
    <string name="ucitavanje_text">Učitavanje...</string>
    <string name="odjavi_se_text">Odjavi se</string>
    <string name="podesavanja_profila_text">Podešavanja profila</string>
    <string name="sacuvaj_izmjene_text">Sačuvaj izmjene</string>
    <string name="do_sljedeceg_ranka_text">Do sljedećeg ranka:</string>
    <string name="progress_placeholder_text">%1$d%%</string>
    <string name="evro_placeholder_text">%.2f \u20AC</string>
    <string name="prodajna_mjesta_text">Prodajna mjesta</string>
    <string name="uredi_objave_text">Uredi objave</string>
    <string name="dodajte_prodajno_mjesto_text">Dodajte prodajno mjesto</string>
    <string name="no_mjesto_warning_description">Trenutno nemate ni jedno prodajno mjesto. Dodajte prodajno mjesto da bi mogli prodavati žitarice.</string>
    <string name="upozorenje_text">Upozorenje</string>
    <string name="leafy_trade_desc">Poljoprivrednik ste i proizvodite žitarice, voće i povrće ?\nUz pomoć leafy trade-a prodajte svoje proizvode ljudima u okolini.
        \n\nLeafy trade funkcioniše na način da se Vaš objavljeni oglas prikazuje ljudima u krugu od 10 kilometara.
        Tokom kreiranja proizvoda dužni ste unijeti broj mobilnog telefona pomoću kojeg vas zainteresovani kupci mogu kontaktirati nakon objave oglasa.</string>
    <string name="leafy_trade_prodajno_mjesto_desc">Prodajno mjesto je lokacija koju vi kreirate na mapi kako bi aplikacija mogla odrediti udaljenost između prodavača i kupca</string>
    <string name="leafy_trade_proizvod_desc">Pri prodaji proizvoda je potrebno navesti koji proizvod tačno prodajete. Na taj način potencijalni kupci mogu lakše doći do vašeg oglasa.</string>
    <string name="leafy_trade_slika_desc">Slika proizvoda je bitan dio oglasa. Pomoću slike potencijalni kupci prepoznaju kvalitet proizvoda i iz tog razloga je bitno da slika koju postavite jasno prikazuje Vaš proizvod.</string>
    <string name="leafy_trade_opis_desc">Vaš oglas pored slike treba da sadrži naslov i opis. Potrudite se da opis proizvoda bude kratak i jasan.</string>
    <string name="leafy_trade_cijena_desc">Cijena proizvoda je jedna od najvažnijih stvari pri kreiranju proizvoda. Vrijednost koju unesete u polje ispod će biti prikazana kao cijena Vašeg proizvoda svim korisnicima.\nCijenu unesite u <b>evrima</b></string>
    <string name="leafy_trade_phone_desc">Došli ste do posljednjeg koraka pri kreiranju proizvoda.\n\nU ovom koraku trebate unijeti Vaš telefonski broj kako bi Vas zainteresovani kupci mogli kontaktirati i dogovoriti prodaju.</string>
    <string name="trade_phone_koristenje_dialog_title">Kako se koristi Vaš broj telefona ?</string>
    <string name="trade_phone_koristenje_dialog_text">Unošenjem broja telefona omogućujete drugim korisnicima, potencijalnim kupcima, da vide Vaš broj telefona kao i da stupe sa vama u kontakt. Broj telefona isključivo se koristi u te svrhe i neće biti zloupotrijebljen.\n\nAko prihvatate ovu upotrebu Vašeg telefonskog broja, pritisnite Prihvatam.</string>
    <string name="leafy_buy_select_proizvod_desc">Leafy buy je sistem koji na osnovu Vaše lokacije i odabranog proizvoda pronalazi prodavače u krugu od 10 kilometara od Vaše trenutne lokacije.\nUkoliko ste u potrazi za proizvodima u Vašoj okolini, leafy buy će Vam pomoći u pronalaženju.</string>
    <string name="pretrazi_text">Pretraži</string>
    <string name="pretrazivanje_text">Pretraživanje...</string>
    <string name="lokacija_permission_rationale">Aplikacija Leafy zahtijeva Vašu lokaciju kako bi mogla odrediti Vašu trenutnu lokaciju pri pretraživanju proizvoda u Vašoj blizini.\nAko odbijete korištenje Vaše lokacije neke od funkcija aplikacije neće raditi.</string>
</resources>