<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.SelectPlantFragment">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/nunito_regular"
        android:text="@string/izaberi_biljku_text"
        android:textAlignment="center"
        android:textSize="17sp"
        app:layout_constraintBottom_toTopOf="@id/corn_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/corn_card"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="12dp"
        app:contentPadding="12dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/potato_card"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:cardElevation="0dp"
        app:strokeWidth="1dp"
        app:strokeColor="#E1E1E1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/corn_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/corn_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/corn_image"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/nunito_regular"
                android:maxLines="1"
                android:text="@string/kukuruz_text"
                android:textAlignment="center"
                android:textSize="16sp" />

        </RelativeLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/potato_card"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        app:cardCornerRadius="12dp"
        app:contentPadding="12dp"
        android:clickable="true"
        android:foreground="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/corn_card"
        app:cardElevation="0dp"
        app:strokeWidth="1dp"
        app:strokeColor="#E1E1E1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/potato_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/potato_icon" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/potato_image"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/nunito_regular"
                android:maxLines="1"
                android:text="@string/krompir_text"
                android:textAlignment="center"
                android:textSize="16sp" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>